# learn-knative

./: README.md
examples/: post  services.yaml  triggers
knative/: eventing  feature-toogles  observability  serving
knative/brokers/: in-memory  kafka  kafka-broker.yaml  kafka-hack.yaml  kafka.yaml
knative/networking/: istio  istio-minimal-operator.yaml  kourier
local/: dev  dev-k3d  dev-kind  knative  pre-validate
local/k3d/: k3d-setup
local/kind/: kind-setup  kind.yaml
services/deno-service/: Dockerfile  Makefile  README.md  app.tsx  deps.ts  server.tsx
services/go-service/: .gitignore  Dockerfile  go.mod  go.sum  main.go
services/node-service/: Dockerfile  main.js  package-lock.json  package.json
services/python-service/: Dockerfile  json_sample_server.py
services/rust-service/: Cargo.toml  Dockerfile
services/rust-service/src/: main.rs
