[package]
name = "rust-service"
version = "0.2.0"
edition = "2018"

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-cors = "^0.2.0"
lazy_static = "1.4.0"
bytes = "^0.5"
futures = "^0.3"
serde_json = "^1.0"
url = { version = "^2.1" }
env_logger = "0.7.1"
cloudevents-sdk = "0.2.0"
cloudevents-sdk-actix-web = "0.2.0"
log = "0.4.11"
serde = {version = "1.0.115", features = ["derive"]}

